Attempt to fix funky bg jump upon scroll on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,7 @@ h1 {
     -o-background-size: cover;
     background-size: cover;
     background-color: white;
-    height: 100%;
+    height: 100vh;
 }
 
 .about {
@@ -59,7 +59,6 @@ h1 {
 	    -moz-background-size: contain;
 	    -o-background-size: contain;
 	    background-size: contain;
-	    height: 750px;
 	}
 	.about {
 	    padding-top: 0px;
@@ -68,7 +67,7 @@ h1 {
 	    width: 55%;
 	    padding-left: 50px;
 	    color: #50556C;
-	    height: 100%;
+	    height: 100vh;
 	    position: absolute;
 	    right: 0;
 	    overflow-y: scroll;
